--- a/public/css/app.css
+++ b/public/css/app.css
@@ -4893,7 +4893,8 @@ tbody.collapse.in {
     position: relative;
     min-height: 50px;
     margin-bottom: 22px;
-    border: 1px solid transparent
+    border: 1px solid transparent;
+    width: 120vw;
 }
 
 .navbar:after,
@@ -7755,4 +7756,94 @@ button.close {
 .dropdown-menu a {
     float: right;
     margin-right: 5px;
+}
+
+.worker select {
+    width: 250px;
+    float: left;
+    position: relative;
+    top: -5px;
+    margin-left: 1%;
+}
+
+.worker select :hover {
+    background-color: white;
+}
+
+.rules_select {
+    width: 30vw;
+}
+
+.rules_select label {
+    float: right;
+}
+
+.rules_select input {
+    float: right;
+    margin-left: 2%;
+}
+
+
+/* The sidebar menu */
+
+.sidenav {
+    height: 100%;
+    /* Full-height: remove this if you want "auto" height */
+    width: 15vw;
+    /* Set the width of the sidebar */
+    position: fixed;
+    /* Fixed Sidebar (stay in place on scroll) */
+    z-index: 1;
+    /* Stay on top */
+    top: 0;
+    /* Stay at the top */
+    left: 0;
+    background-color: #111;
+    /* Black */
+    overflow-x: hidden;
+    /* Disable horizontal scroll */
+    padding-top: 20px;
+}
+
+
+/* The navigation menu links */
+
+.sidenav a {
+    padding: 6px 8px 6px 16px;
+    text-decoration: none;
+    font-size: 25px;
+    color: #818181;
+    display: block;
+}
+
+
+/* When you mouse over the navigation links, change their color */
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+
+/* Style page content */
+
+.main {
+    margin-left: 160px;
+    /* Same as the width of the sidebar */
+    padding: 0px 10px;
+}
+
+
+/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
+
+@media screen and (max-height: 450px) {
+    .sidenav {
+        padding-top: 15px;
+    }
+    .sidenav a {
+        font-size: 18px;
+    }
+}
+
+.py-4 {
+    width: 115vw;
 }
